Fixed MAGETWO-8923: Width of Tax Class dropdown isn't correspond to values (too big) for bundle product

--- a/app/code/Mage/Catalog/view/adminhtml/product/product.css
+++ b/app/code/Mage/Catalog/view/adminhtml/product/product.css
@@ -488,6 +488,10 @@
     top: 30px;
 }
 
+.field-tax_class_id .addon select {
+    border-radius: 4px;
+}
+
 /* Variations Search Field */
 #variations-search-field {
     margin-bottom: 16px;
